Refactor code structure for improved readability and maintainability

--- a/notebooks/01_EDA_and_Clustering_Demographic.ipynb
+++ b/notebooks/01_EDA_and_Clustering_Demographic.ipynb
@@ -1889,8 +1889,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "0627209b-1cef-4650-8a5d-b7b2d95d790b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = scaled_df.drop(columns=[\"Cluster\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "e771ed3f-ac9d-460e-ae0c-d05b4351e5e4",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KMeans Silhouette Score:  0.2627818156724731\n",
+      "Agglomerative Silhouette Score:  0.29168059196968676\n",
+      "Gausian Silhouette Score:  0.2627818156724731\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import silhouette_score\n",
+    "from sklearn.cluster import AgglomerativeClustering\n",
+    "from sklearn.mixture import GaussianMixture\n",
+    "\n",
+    "kmeans_labels = scaled_df[\"Cluster\"]\n",
+    "kmeans_sil = silhouette_score(X, kmeans_labels)\n",
+    "print(\"KMeans Silhouette Score: \", kmeans_sil)\n",
+    "\n",
+    "agg = AgglomerativeClustering(n_clusters = 2)\n",
+    "agg_labels = agg.fit_predict(X)\n",
+    "agg_sil = silhouette_score(X, agg_labels)\n",
+    "print(\"Agglomerative Silhouette Score: \", agg_sil)\n",
+    "\n",
+    "gmm = GaussianMixture(n_components = 2, random_state = 42)\n",
+    "gmm_labels = gmm.fit_predict(X)\n",
+    "gmm_sil = silhouette_score(X, gmm_labels)\n",
+    "print(\"Gausian Silhouette Score: \", gmm_sil)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "737c0f8b-c1ab-408c-9ddd-c62643b5560e",
    "metadata": {},
    "outputs": [],
    "source": []
