Fix mapping of RIAGENDR column in feature engineering step

--- a/notebooks/02_Merging_Examination_and_Feature_Engineering.ipynb
+++ b/notebooks/02_Merging_Examination_and_Feature_Engineering.ipynb
@@ -569,7 +569,7 @@
    "outputs": [],
    "source": [
     "features2 = merged_df.drop(columns = [\"SEQN\"]).copy()\n",
-    "\n",
+    "merged_df[\"RIAGENDR\"] = merged_df[\"RIAGENDR\"].map({0: 1, 1: \n",
     "features2 = pd.get_dummies(\n",
     "    features2,\n",
     "    columns = [\"RIDRETH3\", \"DMDMARTL\"],\n",
