Fix CSV export by adding index parameter to prevent index column in output

--- a/notebooks/06_Medications_Analysis_and_Merge.ipynb
+++ b/notebooks/06_Medications_Analysis_and_Merge.ipynb
@@ -950,12 +950,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "a79fc883-3496-4870-b799-8a1ffda34f5a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "merged_med.to_csv(\"../data/processed/base_plus_diet_medications.csv\")"
+    "merged_med.to_csv(\"../data/processed/base_plus_diet_medications.csv\", index = False)"
    ]
   },
   {
