Add code to export final patient dataset with clusters to CSV

--- a/notebooks/08_Final_Modeling_and_Clustering.ipynb
+++ b/notebooks/08_Final_Modeling_and_Clustering.ipynb
@@ -2095,8 +2095,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "id": "f1141374-da2a-4b17-a86a-52542f8f298d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final.to_csv(\"../data/processed/full_patient_dataset_with_clusters.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a207d310-50cb-479b-86dc-fcbd8126ecc6",
    "metadata": {},
    "outputs": [],
    "source": []
