Add scrolling metadata to code cells for improved notebook navigation

--- a/notebooks/09_Reinforcement_Learning_Patient_Recommendations.ipynb
+++ b/notebooks/09_Reinforcement_Learning_Patient_Recommendations.ipynb
@@ -1110,7 +1110,9 @@
    "cell_type": "code",
    "execution_count": 36,
    "id": "1c3eff55-2742-4aa3-a972-a844340ee472",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1373,7 +1375,9 @@
    "cell_type": "code",
    "execution_count": 37,
    "id": "662f6fb6-40c3-4baa-bbd8-265870d3eb0f",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
